Changed the master template to use a separate template for the footer.  Update that template to include lists of links for the various areas of the site (including pages that do not exist).  Updated the stylesheet so that the lists are aligned correctly.  See #63.
Also let me know what sorts of things you want down here.  The links I have included are those that I came up with in a single sitting.

--- a/branches/63 - Redo footer/css/style.css
+++ b/branches/63 - Redo footer/css/style.css
@@ -290,3 +290,11 @@ a:hover {
 #reg_loc_sub input:hover {
 	
 }
+#footer_content ul{
+	float:left;
+	width:150px;	
+}
+#footer_copyright{
+	clear:both;
+	text-align:center
+}
